--- a/instafeed.html
+++ b/instafeed.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Instagram Feed for Email</title>
 <script runat="server">
-    var rows = Platform.Function.DeleteData('Instagram_Feed',['id'],[1]);
+    var rows = Platform.Function.DeleteData('DATA EXTENSION NAME',['id'],[1]);
  </script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script>
